Fix slider gap

--- a/src/components/AdvancedSearch/AdvancedSearch.module.scss
+++ b/src/components/AdvancedSearch/AdvancedSearch.module.scss
@@ -269,7 +269,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 8px;
+  gap: 22px;
 
   .slider {
     width: 100%;
